// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dollar-sign.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
$

\\$

\\\\$

\\\\\\$

=====================================output=====================================
\\$

\\$

\\\\\\$

\\\\\\$

================================================================================
`;

exports[`empty-block.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
$$
$$

=====================================output=====================================
$$
$$

================================================================================
`;

exports[`math-like.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
$10 - $20

=====================================output=====================================
$10 - $20

================================================================================
`;

exports[`remark-math.md 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<!-- tests from https://github.com/Rokt33r/remark-math/blob/9e13e49/specs/remark-math.spec.js -->

$$
\\beta+\\gamma
$$

---

$\\alpha\\$

---

\\$\\alpha\\$

---

\\\\$\\alpha$

---

\`$\`\\alpha$

---

$\\alpha\`$\` foo

---

$\`\\alpha\`$

---

$\\alpha\\$$

---

$$
\\alpha\\$
$$

---

tango
$$
\\alpha
$$

---

$$\\\\alpha$$

---

$$\\alpha$$
$$
\\alpha\\beta
$$

---

> $$
> \\alpha\\beta
> $$

---

  $$$
    \\alpha
  $$$

---

$$  must
\\alpha
$$  be ignored

---

$$
\\alpha
$$
\`\`\`
code fence
\`\`\`

=====================================output=====================================
<!-- tests from https://github.com/Rokt33r/remark-math/blob/9e13e49/specs/remark-math.spec.js -->

$$
\\beta+\\gamma
$$

---

\\$\\alpha\\$

---

\\$\\alpha\\$

---

\\\\$\\alpha$

---

\`$\`\\alpha\\$

---

\\$\\alpha\`$\` foo

---

$\`\\alpha\`$

---

$\\alpha\\$$

---

$$
\\alpha\\$
$$

---

tango

$$
\\alpha
$$

---

$$\\\\alpha$$

---

$$\\alpha$$

$$
\\alpha\\beta
$$

---

> $$
> \\alpha\\beta
> $$

---

$$
  \\alpha
$$

---

$$
\\alpha
$$

---

$$
\\alpha
$$

\`\`\`
code fence
\`\`\`

================================================================================
`;
